@@ -35,6 +35,7 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 * Dockerized all test environment for .NET, JavaScript, Python, Go, and Python-based tests for Console, and added Docker as a build requirement.
 * Async operations in .NET can now be cancelled. This however does not cancel work that is already happening on the server.
 * Bumped to `snakeyaml` 1.32 to fix security vulnerability.
+* Added timeout option for SSL handshake. Also, increased defaults for MAX_WAIT_FOR_CONNECTION and CONNECTION_SETUP_TIMEOUT_MILLIS.
 
 ==== Bugs
 
